Refactor services for consistent scope handling, cleanup, and improved validation:
- Standardize `serviceScope` usage across core, runtime, and resource services, replacing legacy `scope` references.
- Optimize internal APIs for better semantic handling and reduce redundant operations.
- Migrate `EmptyDataflow` to use default `Coverage.empty()` for initialization.
- Remove unnecessary logging in `ServiceAuthorizationManager` to declutter output.
- Fix minor bugs in cohort handling and concept declaration logic in `ReasonerService`.